slides appear without prismic content

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Risidio</title>
     <meta name="referrer" content="no-referrer">
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vueperslides"></script>
+    <link href="https://unpkg.com/vueperslides/dist/vueperslides.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
